Here are the changes from version 20070826 to version YYYYMMDD.

* 2007-12-14
   - Fixed bug the FFI visible representation of Int16.int ref (and
     references of other primitive types smaller than 32-bits) on
     big-endian platforms.
     Thanks to Dave Herman for the bug report.

* 2007-12-13
   - Fixed bug in ImperativeIOExtra.canInput (TextIO.canInput).
     Thanks to Ville Laurikari for the bug report.

* 2007-12-09 
   - Better constant folding of IntInf operations.

* 2007-12-07
   - Fixed bug in algebraic simplification of real primitives.
     Real.<= (x, x) is false when x is NaN.

* 2007-11-29
   - Fixed bug in type inference of flexible records.  This would
     later cause the compiler to raise the TypeError exception.
     Thanks to Wesley Terpstra for the bug report.

* 2007-11-28
   - Fixed bug in cross-compilation of gdtoa library.  Thanks to
     Wesley Terpstra for the bug report and patch.

* 2007-11-20
   - Fixed bug in pass to flatten refs into containing data structure.
     Thanks to Ruy LeyWild for the bug report.

* 2007-11-19
   - Fixed bug in the handling of weak pointers by the mark-compact
     garbage collector.  Thanks to Sean McLaughlin for the bug report
     and Florian Weimer for the initial diagnosis.

* 2007-11-07
   - Added %posint command to ml-lex, to set the yypos type and allow
     the lexing of multi-gigabyte input files.  Thanks to Florian
     Weimer for the feature concept and original patch.

* 2007-11-07
   - Added command-line switch -mlb-path-var '<name> <value>' for
     specifying MLB path variables.

* 2007-09-20
   - Fixed bug in elaboration of structures with signature
     constraints.  This would later cause the compiler to raise the
     TypeError exception.  Thanks to Vesa Karvonen for the bug report.

* 2007-09-11
   - Fixed bug in interaction of _export-ed functions and signal
     handlers.  Thanks to Sean McLaughlin for the bug report.

* 2007-09-03