@@ -352,6 +352,11 @@ heap size for \fBmax-heap\fP is accounted for as with
 \fBfixed-heap\fP.
 
 .TP
+\fBmay-page-heap \fI{\fBfalse\fP|\fBtrue\fP}\fP\fR
+Enable paging the heap to disk when unable to grow the heap to a
+desired size.
+
+.TP
 \fBno-load-world\fP
 Disable \fBload-world\fP.  This can be used as an argument to the
 compiler via \fB-runtime no-load-world\fP to create executables that
